--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=Jpa-demo
+spring.application.name=akaroa
 
 # DATASOURCE (MYSQL 8.0)
 spring.datasource.url=jdbc:mysql://localhost:3306/sistema_inventarios
@@ -15,3 +15,7 @@ spring.jpa.open-in-view=false
 # Table names physically
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server.port=8082
+
+#Spring Security
+spring.security.user.name=admin
+spring.security.user.password=admin123
