--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.application.name=akaroa
 
 # DATASOURCE (MYSQL 8.0)
 spring.datasource.url=jdbc:mysql://localhost:3306/sistema_inventarios
-spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.username=root
+#spring.datasource.password=root
+spring.datasource.username=adminF
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #JPA
@@ -17,5 +19,5 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 server.port=8082
 
 #Spring Security
-spring.security.user.name=admin
-spring.security.user.password=admin123
+#spring.security.user.name=admin
+#spring.security.user.password=admin123
