--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,12 +9,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #JPA
 spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
 spring.jpa.open-in-view=false
 
 # Table names physically
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-server.port=8082
+server.port=8084
+
 
 #Spring Security
 spring.security.user.name=admin
